Log-in / Register + Manual / Sim Finished

--- a/soundhive-api/src/main/resources/application.properties
+++ b/soundhive-api/src/main/resources/application.properties
@@ -6,4 +6,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.root=ERROR
 logging.level.org.springframework=ERROR
-logging.level.org.hibernate=ERROR
+
+# In particular, silence the auto-config report
+logging.level.org.springframework.boot.autoconfigure=ERROR
+logging.level.org.springframework.boot.autoconfigure.condition=ERROR
+
+# You can still debug your own code
+logging.level.com.example.soundhiveapi=ERROR
+
