--- a/soundhive-api/pom.xml
+++ b/soundhive-api/pom.xml
@@ -86,6 +86,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>net.sourceforge.plantuml</groupId>
+			<artifactId>plantuml</artifactId>
+			<version>1.2023.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
